--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,29 +9,26 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [published]
-
-permissions:
-  contents: read
+  push:
+    branches: [main]
 
 jobs:
-  release:
+  release-on-pypi:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          enable-cache: true
+      - uses: actions/checkout@v4
+
       - name: Set up Python
-        run: uv python install 3.10
-      - name: Install the project
-        run: uv sync --all-extras
-      - name: Build the project
-        run: uv build
-      - name: Build and publish Python package
-        run: uv publish
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
         env:
-          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
+          UV_INDEX_NEOPALLIUM_PASSWORD: ${{ secrets.AZURE_DEVOPS_PAT }}
+        run: |
+          pip install uv
+          uv venv
+          uv build
+          uv publish
