--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=64", "setuptools-scm>=8"]
+build-backend = "setuptools.build_meta"
+
 [project]
 authors = [{ name = "Jason Liu", email = "jason@jxnl.co" }, { name = "Ivan Leo", email = "ivan@jxnl.co" }, ]
 license = { text = "MIT" }
@@ -16,13 +20,9 @@ dependencies = [
     "requests<3.0.0,>=2.32.3",
 ]
 name = "instructor"
-version = "1.8.2"
+dynamic = ["version"]
 description = "structured outputs for llm"
 readme = "README.md"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [tool.uv]
 package = true
@@ -137,3 +137,13 @@ cerebras_cloud_sdk = ["cerebras-cloud-sdk<2.0.0,>=1.5.0"]
 fireworks-ai = ["fireworks-ai<1.0.0,>=0.15.4"]
 writer = ["writer-sdk<2.0.0,>=1.2.0"]
 google-genai=["google-genai>=1.5.0","jsonref<2.0.0,>=1.1.0",]
+
+[[tool.uv.index]]
+name = "Neopallium"
+url = "https://pkgs.dev.azure.com/Sagittal/Neopallium/_packaging/Sagittal/pypi/simple/"
+publish-url = "https://pkgs.dev.azure.com/Sagittal/Neopallium/_packaging/Sagittal/pypi/upload/"
+explicit = true
+
+[tool.setuptools_scm]
+version_scheme = "post-release"
+local_scheme = "no-local-version"
