--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,7 +13,7 @@ on:
     branches: [main]
 
 jobs:
-  release-on-pypi:
+  release-to-index:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,4 +31,4 @@ jobs:
           pip install uv
           uv venv
           uv build
-          uv publish
+          uv publish --index Neopallium -u __token__ -p $UV_INDEX_NEOPALLIUM_PASSWORD
